upgrade: fix buttons for bootstrap3
bootstrap3 now requires btn-default if no other btn option is present.
download button on home page was too small in german translation

--- a/app/assets/stylesheets/leap.scss
+++ b/app/assets/stylesheets/leap.scss
@@ -198,7 +198,7 @@ input, textarea {
   }
   .download {
     a.btn {
-      width: 15em;
+      width: 18em;
       font-weight: bold;
       small {
         font-weight: normal;
